<resources>
    <string name="app_name">Events</string>
    <string name="editTextLogin_1">Логин</string>
    <string name="editTextPassword_1">Пароль</string>
    <string name="buttonLogIn_1">Авторизироваться.</string>
    <string name="buttonReg_1">Зарегистрироваться.</string>
    <string name="editTextLogin_2">Логин</string>
    <string name="editTextPassword_2">Пароль</string>
    <string name="buttonLogIn_2">Авторизироваться.</string>
    <string name="buttonReg_2">Зарегистрироваться.</string>
    <string name="editTextSearch_1">Поиск</string>
    <string name="buttonSearch_1">Найти.</string>
    <string name="helloText_1">Здесь должно быть приветствие.</string>
    <string name="editTextSearch_2">Поиск</string>
    <string name="buttonSearch_2">Найти</string>
    <string name="helloText_2">Здесь должно быть приветствие.</string>
    <string name="editTextRegLogin_1">Логин</string>
    <string name="editTextRegEmail">Почта</string>
    <string name="editTextRegPassword">Пароль</string>
    <string name="editTextRegPasswordVer_1">Повторите пароль</string>
    <string name="buttonRegTwo_1">Зарегистрироваться.</string>
    <string name="editTextRegLogin_2">Логин</string>
    <string name="editTextRegEmail_2">Почта</string>
    <string name="editTextRegPassword_2">Пароль</string>
    <string name="editTextRegPasswordVer">Повторите пароль</string>
    <string name="buttonRegTwo_2">Зарегистрироваться.</string>
    <string name="titleEvent">Название: День города.</string>
    <string name="ownerEvent">Организатор: Виктор Прокопьев.</string>
</resources>